projects/vb6parse/snapshots/parsers/cst/invalid_syntax/invalid_control_flow/exit_sub_outside_sub_cst.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_control_flow.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ExitStatement
      children:
        - kind: ExitKeyword
          text: Exit
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
    - kind: Newline
      text: "\n"
