projects/vb6parse/snapshots/parsers/cst/invalid_syntax/invalid_control_flow/resume_without_on_error_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_control_flow.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
[]
