projects/vb6parse/snapshots/parsers/cst/invalid_syntax/invalid_control_flow/stop_with_arguments_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_control_flow.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    Stop 123\\nEnd Sub\\n\", error_offset: 24, line_start: 3, line_end: 4, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [IntegerLiteral] }), severity: Error, labels: [], notes: [] }"
